style.css
@media (max-width: 768px) {
    body {
        background-position: top;
    }

    main {
        padding: 20px;
    }

    h1 {
        font-size: 32px;
    }

    h2 {
        font-size: 24px;
    }

    p, li {
        font-size: 16px;
    }

    section {
        padding: 20px;
    }

    .footer {
        margin-top: 60px;
        padding: 30px 0;
    }

    .social-links img {
        width: 32px;
        margin: 0 10px;
    }
}
html {
    scroll-behavior: smooth;
}
section {
    max-width: 900px;
    margin: auto;
}


body{
    margin: 5px;
    min-height: 100vh;
    background-image: url("assets/bg_img.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
footer{
    margin-top: 100px;
    color: black;
    text-align: center;
    padding: 40px 0;
    position: relative;
    background: rgba(0, 0, 0, 0.05);
    
}
.footer h2{
    margin-bottom: 20px;
}
.social_icon{
    height : 40px;
    width : 40px;
    margin : 0 12px;
    cursor: pointer;
    transition: transform 0.3s ease;
}
.social_icon:hover {
    transform: scale(1.1);            /*Slightly increases size (10%)*/
}
li:hover {
  color: #0077ff;
  transform: translateX(5px);
  transition: 0.3s;
}
li::before{
    content: "▸ ";
    color: #0077ff;
}
section:empty::after {
  content: "Coming soon...";
  opacity: 0.6;
}
.navbar{
    position: absolute;
    width: 100%;
    top: 110px;
    display: flex;
    gap: 10px;
    padding: 10px 0;
    background: #ffffff;
    border-radius: 40px;
    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
    z-index: 1000;
}
.navbar a{
    text-decoration: none;
    color: #333;
    font-size: 14px;
    padding: 8px 18px;
    border-radius: 20px;
    transition: 0.3s;
}
.navbar a.active{
    background: #b8f7b0;
    color: #000;
}
.navbar a:hover {
    background: #e8fbe5;
}

